# msilbc

./: ChangeLog  INSTALL  Makefile.in  NEWS  README  aclocal.m4  configure  configure.ac  ilbc.c  msilbc_2.0.1.orig.tar.gz.delta  msilbc_2.0.1.orig.tar.gz.id  msilbc_2.0.2.orig.tar.gz.delta  msilbc_2.0.2.orig.tar.gz.id  msilbc_2.0.3.orig.tar.gz.delta  msilbc_2.0.3.orig.tar.gz.id
debian/: changelog
